--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<div class="timeline__row">
 				<div class="card">
 					<div class="card__detalles">
-						<h3 class="card__titulo">Lorem Ipsum</h3>
+						<h3 class="card__titulo">Lorem Ipsum 1</h3>
 						<p class="card__descripción">1ro Enero 2023</p>
 					</div>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
@@ -69,7 +69,7 @@
 			<div class="timeline__row">
 				<div class="card card-derecha">
 					<div class="card__detalles">
-						<h3 class="card__titulo">Lorem Ipsum</h3>
+						<h3 class="card__titulo">Lorem Ipsum 2</h3>
 						<p class="card__descripción">1ro Enero 2023</p>
 					</div>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
@@ -79,12 +79,22 @@
 			<div class="timeline__row">
 				<div class="card">
 					<div class="card__detalles">
-						<h3 class="card__titulo">Lorem Ipsum</h3>
+						<h3 class="card__titulo">Lorem Ipsum 3</h3>
 						<p class="card__descripcion">1ro Enero 2023</p>
 					</div>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
 				</div>
 			</div> <!-- Tercera fila -->
+
+			<div class="timeline__row">
+				<div class="card card-derecha">
+					<div class="card__detalles">
+						<h3 class="card__titulo">Lorem Ipsum 4</h3>
+						<p class="card__descripcion">1ro Enero 2023</p>
+					</div>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
+				</div>
+			</div> <!-- Cuarta fila -->
 		</div>
 	</section>
 
