--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<div class="card">
 					<div class="card__detalles">
 						<h3 class="card__titulo">Lorem Ipsum 1</h3>
-						<p class="card__descripción">1ro Enero 2023</p>
+						<p class="card__fecha">1ro Enero 2023</p>
 					</div>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
 				</div>
@@ -70,7 +70,7 @@
 				<div class="card card-derecha">
 					<div class="card__detalles">
 						<h3 class="card__titulo">Lorem Ipsum 2</h3>
-						<p class="card__descripción">1ro Enero 2023</p>
+						<p class="card__descripcion">1ro Enero 2023</p>
 					</div>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
 				</div>
@@ -80,7 +80,7 @@
 				<div class="card">
 					<div class="card__detalles">
 						<h3 class="card__titulo">Lorem Ipsum 3</h3>
-						<p class="card__descripcion">1ro Enero 2023</p>
+						<p class="card__fecha">1ro Enero 2023</p>
 					</div>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
 				</div>
@@ -90,7 +90,7 @@
 				<div class="card card-derecha">
 					<div class="card__detalles">
 						<h3 class="card__titulo">Lorem Ipsum 4</h3>
-						<p class="card__descripcion">1ro Enero 2023</p>
+						<p class="card__fecha">1ro Enero 2023</p>
 					</div>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
 				</div>
