--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<script type="text/javascript" src="js/script.js"></script>
+	<script defer type="text/javascript" src="js/script.js"></script>
+	<script src="https://kit.fontawesome.com/5756d7ce09.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<header class="header">
 		<a href="#" class="logo">Amay</a>
-		<nav class="navigation">
+
+		<button class="mobile-nav-toggle" aria-controls="nav-bar" aria-expanded="false">
+			<span class="visualmente-oculto">Menu</span>
+		</button>
+
+		<nav id="nav-bar" class="navigation" data-visible="false">
 			<ul class="navigation__list">
-				<li class="navigation__item"><a class="navigation__text" href="#home">Inicio</a></li>
-				<li class="navigation__item"><a class="navigation__text" href="#educacion">Educación</a></li>
-				<li class="navigation__item"><a class="navigation__text" href="#experiencia">Experiencia</a></li>
-				<li class="navigation__item"><a class="navigation__text" href="#habilidades">Habilidades</a></li>
-				<li class="navigation__item"><a class="navigation__text" href="#portafolio">Portafolios</a></li>
-				<li class="navigation__item"><a class="navigation__text navigation__text-button" href="#contacto">Contacto</a></li>
+				<li class="navigation__item"><a aria-hidden="true" class="navigation__text" href="#home">Inicio</a></li>
+				<li class="navigation__item"><a aria-hidden="true" class="navigation__text" href="#educacion">Educación</a></li>
+				<li class="navigation__item"><a aria-hidden="true" class="navigation__text" href="#experiencia">Experiencia</a></li>
+				<li class="navigation__item"><a aria-hidden="true" class="navigation__text" href="#habilidades">Habilidades</a></li>
+				<li class="navigation__item"><a aria-hidden="true" class="navigation__text" href="#portafolio">Portafolios</a></li>
+				<li class="navigation__item"><a aria-hidden="true" class="navigation__text navigation__text-button" href="#contacto">Contacto</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -56,6 +62,7 @@
 		<h2 class="educacion__titulo">Educación</h2>
 		<div class="timeline">
 			<div class="center-line"></div>
+
 			<div class="timeline__row">
 				<div class="card">
 					<div class="card__detalles">
@@ -65,6 +72,9 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
 				</div>
 			</div> <!-- Primera fila -->
+
+			<div class="timeline__space"></div>
+			<div class="timeline__space"></div>
 
 			<div class="timeline__row">
 				<div class="card card-derecha">
@@ -86,6 +96,9 @@
 				</div>
 			</div> <!-- Tercera fila -->
 
+			<div class="timeline__space"></div>
+			<div class="timeline__space"></div>
+
 			<div class="timeline__row">
 				<div class="card card-derecha">
 					<div class="card__detalles">
@@ -95,6 +108,7 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
 				</div>
 			</div> <!-- Cuarta fila -->
+
 		</div>
 	</section>
 
