Added experience section

--- a/index.html
+++ b/index.html
@@ -113,5 +113,46 @@
 		</div>
 	</section>
 
+	<section class="experiencia" id="experiencia">
+		<h2 class="experiencia__titulo">Experiencia</h2>
+		<div class="trabajos container">
+			<div class="trabajo">
+				<img class="trabajo__imagen" src="imgs/placeholder_image.png" alt="">
+				<div class="trabajo__textos">
+					<h3>Lorem Ipsum</h3>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, autem architecto saepe veniam reiciendis dignissimos animi minus, rem illo suscipit fuga, nam voluptatibus quaerat dolorum!</p>
+					<p class="trabajo__fecha">1ro Enero 2023</p>
+				</div>
+			</div>
+
+			<div class="trabajo">
+				<img class="trabajo__imagen" src="imgs/placeholder_image.png" alt="">
+				<div class="trabajo__textos">
+					<h3>Lorem Ipsum</h3>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, autem architecto saepe veniam reiciendis dignissimos animi minus, rem illo suscipit fuga, nam voluptatibus quaerat dolorum!</p>
+					<p class="trabajo__fecha trabajo__fecha-inverso">1ro Enero 2023</p>
+				</div>
+			</div>
+
+			<div class="trabajo">
+				<img class="trabajo__imagen" src="imgs/placeholder_image.png" alt="">
+				<div class="trabajo__textos">
+					<h3>Lorem Ipsum</h3>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, autem architecto saepe veniam reiciendis dignissimos animi minus, rem illo suscipit fuga, nam voluptatibus quaerat dolorum!</p>
+					<p class="trabajo__fecha">1ro Enero 2023</p>
+				</div>
+			</div>
+
+			<div class="trabajo">
+				<img class="trabajo__imagen" src="imgs/placeholder_image.png" alt="">
+				<div class="trabajo__textos">
+					<h3>Lorem Ipsum</h3>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, autem architecto saepe veniam reiciendis dignissimos animi minus, rem illo suscipit fuga, nam voluptatibus quaerat dolorum!</p>
+					<p class="trabajo__fecha trabajo__fecha-inverso">1ro Enero 2023</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
 </body>
 </html>
