--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			<div class="trabajo">
 				<img class="trabajo__imagen" src="imgs/placeholder_image.png" alt="">
 				<div class="trabajo__textos">
-					<h3>Lorem Ipsum</h3>
+					<h3 class="trabajo__titulo">Lorem Ipsum</h3>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, autem architecto saepe veniam reiciendis dignissimos animi minus, rem illo suscipit fuga, nam voluptatibus quaerat dolorum!</p>
 					<p class="trabajo__fecha">1ro Enero 2023</p>
 				</div>
@@ -128,7 +128,7 @@
 			<div class="trabajo">
 				<img class="trabajo__imagen" src="imgs/placeholder_image.png" alt="">
 				<div class="trabajo__textos">
-					<h3>Lorem Ipsum</h3>
+					<h3 class="trabajo__titulo">Lorem Ipsum</h3>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, autem architecto saepe veniam reiciendis dignissimos animi minus, rem illo suscipit fuga, nam voluptatibus quaerat dolorum!</p>
 					<p class="trabajo__fecha trabajo__fecha-inverso">1ro Enero 2023</p>
 				</div>
@@ -137,7 +137,7 @@
 			<div class="trabajo">
 				<img class="trabajo__imagen" src="imgs/placeholder_image.png" alt="">
 				<div class="trabajo__textos">
-					<h3>Lorem Ipsum</h3>
+					<h3 class="trabajo__titulo">Lorem Ipsum</h3>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, autem architecto saepe veniam reiciendis dignissimos animi minus, rem illo suscipit fuga, nam voluptatibus quaerat dolorum!</p>
 					<p class="trabajo__fecha">1ro Enero 2023</p>
 				</div>
@@ -146,7 +146,7 @@
 			<div class="trabajo">
 				<img class="trabajo__imagen" src="imgs/placeholder_image.png" alt="">
 				<div class="trabajo__textos">
-					<h3>Lorem Ipsum</h3>
+					<h3 class="trabajo__titulo">Lorem Ipsum</h3>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, autem architecto saepe veniam reiciendis dignissimos animi minus, rem illo suscipit fuga, nam voluptatibus quaerat dolorum!</p>
 					<p class="trabajo__fecha trabajo__fecha-inverso">1ro Enero 2023</p>
 				</div>
