Completed the skills section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<li class="navigation__item"><a aria-hidden="true" class="navigation__text" href="#educacion">Educación</a></li>
 				<li class="navigation__item"><a aria-hidden="true" class="navigation__text" href="#experiencia">Experiencia</a></li>
 				<li class="navigation__item"><a aria-hidden="true" class="navigation__text" href="#habilidades">Habilidades</a></li>
-				<li class="navigation__item"><a aria-hidden="true" class="navigation__text" href="#portafolio">Portafolios</a></li>
+				<li class="navigation__item"><a aria-hidden="true" class="navigation__text" href="#portafolio">Portafolio</a></li>
 				<li class="navigation__item"><a aria-hidden="true" class="navigation__text navigation__text-button" href="#contacto">Contacto</a></li>
 			</ul>
 		</nav>
@@ -41,7 +41,7 @@
 			</div>
 			<div class="botones_main">
 				<a href="#contacto" class="botones_main__boton botones_main__boton-contacto">Contacto</a>
-				<a href="#portafolio" class="botones_main__boton">Portafolios</a>
+				<a href="#portafolio" class="botones_main__boton">Portafolio</a>
 			</div>
 		</div>
 
@@ -70,7 +70,7 @@
 						<h3 class="card__titulo">Lorem Ipsum 1</h3>
 						<p class="card__fecha">1ro Enero 2023</p>
 					</div>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
+					<p class="card__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
 				</div>
 			</div> <!-- Primera fila -->
 
@@ -81,9 +81,9 @@
 				<div class="card card-derecha">
 					<div class="card__detalles">
 						<h3 class="card__titulo">Lorem Ipsum 2</h3>
-						<p class="card__descripcion">1ro Enero 2023</p>
+						<p class="card__fecha">1ro Enero 2023</p>
 					</div>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
+					<p class="card__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
 				</div>
 			</div> <!-- Segunda fila -->
 
@@ -93,7 +93,7 @@
 						<h3 class="card__titulo">Lorem Ipsum 3</h3>
 						<p class="card__fecha">1ro Enero 2023</p>
 					</div>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
+					<p class="card__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
 				</div>
 			</div> <!-- Tercera fila -->
 
@@ -106,7 +106,7 @@
 						<h3 class="card__titulo">Lorem Ipsum 4</h3>
 						<p class="card__fecha">1ro Enero 2023</p>
 					</div>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
+					<p class="card__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa?</p>
 				</div>
 			</div> <!-- Cuarta fila -->
 
@@ -150,6 +150,56 @@
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, autem architecto saepe veniam reiciendis dignissimos animi minus, rem illo suscipit fuga, nam voluptatibus quaerat dolorum!</p>
 					<p class="trabajo__fecha trabajo__fecha-inverso">1ro Enero 2023</p>
 				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="habilidades" id="habilidades">
+		<h2 class="habilidades__titulo">Habilidades</h2>
+		<div class="skills container">
+			<div class="skill">
+				<img src="imgs/placeholder_image.png" alt="" class="skill__imagen">
+				<div class="skill__textos">
+					<h3 class="skill__titulo">Lorem Ipsum</h3>
+					<p class="skill__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa reprehenderit veritatis dolor dolorem excepturi ullam cum ex eligendi repudiandae sit!</p>
+				</div>
+			</div>
+
+			<div class="skill">
+				<img src="imgs/placeholder_image.png" alt="" class="skill__imagen">
+				<div class="skill__textos">
+					<h3 class="skill__titulo">Lorem Ipsum</h3>
+					<p class="skill__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa reprehenderit veritatis dolor dolorem excepturi ullam cum ex eligendi repudiandae sit!</p>
+				</div>
+			</div>
+
+			<div class="skill">
+				<img src="imgs/placeholder_image.png" alt="" class="skill__imagen">
+				<div class="skill__textos">
+					<h3 class="skill__titulo">Lorem Ipsum</h3>
+					<p class="skill__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa reprehenderit veritatis dolor dolorem excepturi ullam cum ex eligendi repudiandae sit!</p>
+				</div>
+			</div>
+
+			<div class="skill">
+				<img src="imgs/placeholder_image.png" alt="" class="skill__imagen">
+				<div class="skill__textos">
+					<h3 class="skill__titulo">Lorem Ipsum</h3>
+					<p class="skill__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa reprehenderit veritatis dolor dolorem excepturi ullam cum ex eligendi repudiandae sit!</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="portafolio" id="portafolio">
+		<h2 class="portafolio__titulo">Portafolio</h2>
+		<div class="carrousel">
+			<div class="proyectos">
+				<img src="" alt="">
+			</div>
+			<div class="controles">
+				<button class="controles__retroceder"></button>
+				<button class="controles__avanzar"></button>
 			</div>
 		</div>
 	</section>
