Finished for now

--- a/index.html
+++ b/index.html
@@ -252,8 +252,31 @@
 		</form>
 	</section>
 
-	<footer>
-		
+	<footer class="footer">
+		<div class="redes_sociales">
+			<div class="red">
+				<a class="red__icono" href="tel:"><i class="fa-solid fa-phone"></i></a>
+				<a class="red__tag" href="">+123 456 789</a>
+			</div>
+
+			<div class="red">
+				<a class="red__icono" href=""><i class="fa-brands fa-twitter"></i></a>
+				<a class="red__tag" href="">@LoremIpsum</a>
+			</div>
+
+			<div class="red">
+				<a class="red__icono" href=""><i class="fa-solid fa-envelope"></i></i></a>
+				<a class="red__tag" href="">lorem@ipsum.com</a>
+			</div>
+
+			<div class="red">
+				<a class="red__icono" href=""><i class="fa-brands fa-instagram"></i></a>
+				<a class="red__tag" href="">Lorem.Ipsum</a>
+			</div>
+		</div>
+		<div class="derechos">
+			<p>Todos los derechos reservados. <i class="fa-regular fa-copyright"></i></p>
+		</div>
 	</footer>
 
 </body>
