--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<header class="header">
-		<a href="#" class="logo">Amay</a>
+		<a href="#" class="logo">John</a>
 
 		<button class="mobile-nav-toggle" aria-controls="nav-bar" aria-expanded="false">
 			<span class="visualmente-oculto">Menu</span>
@@ -36,7 +36,7 @@
 		<img src="imgs/hero_image_placeholder.png" alt="" class="main__imagen">
 		<div class="main__contenido">
 			<div class="textos_main">
-				<h1 class="textos_main__nombre">Amay pancho juarez</h1>
+				<h1 class="textos_main__nombre">John J. Doe</h1>
 				<p class="textos_main__frase">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa, reiciendis?</p>
 			</div>
 			<div class="botones_main">
